<?xml version="1.0"?>
<package format="2">
  <name>fire_fighter</name>
  <version>0.1.0</version>
  <description>The fire_fighter package</description>

  <maintainer email="ashay@todo.todo">ashay</maintainer>

  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/tough_controller_interface</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tough_controller_interface</build_depend>
  <build_depend>tough_common</build_depend>
  <build_depend>tough_moveit_planners</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tough_controller_interface</build_export_depend>
  <build_export_depend>tough_common</build_export_depend>
  <build_export_depend>tough_moveit_planners</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tough_controller_interface</exec_depend>
  <exec_depend>tough_common</exec_depend>
  <exec_depend>tough_moveit_planners</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
